bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    python_version = "3.10",
    requirements_lock = "//src:requirements.txt",
)
use_repo(pip, "py_proto_deps")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
