load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "proto_node",
    srcs = ["proto_node.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "proto_string_literal",
    srcs = ["proto_string_literal.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
    ],
)

py_library(
    name = "proto_identifier",
    srcs = ["proto_identifier.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
    ],
)

py_library(
    name = "proto_bool",
    srcs = ["proto_bool.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_identifier",
        ":proto_node",
    ],
)

py_library(
    name = "proto_int",
    srcs = ["proto_int.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_identifier",
        ":proto_node",
    ],
)

py_library(
    name = "proto_float",
    srcs = ["proto_float.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
    ],
)

py_library(
    name = "proto_constant",
    srcs = ["proto_constant.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_bool",
        ":proto_float",
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
        ":proto_string_literal",
    ],
)

py_library(
    name = "proto_syntax",
    srcs = ["proto_syntax.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        ":proto_string_literal",
    ],
)

py_library(
    name = "proto_import",
    srcs = ["proto_import.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        ":proto_string_literal",
    ],
)

py_library(
    name = "proto_package",
    srcs = ["proto_package.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
    ],
)

py_library(
    name = "proto_option",
    srcs = ["proto_option.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_constant",
        ":proto_identifier",
        ":proto_node",
    ],
)

py_library(
    name = "proto_reserved",
    srcs = ["proto_reserved.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
    ],
)

py_library(
    name = "proto_message",
    srcs = ["proto_message.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_enum",
        ":proto_identifier",
        ":proto_node",
        ":proto_option",
    ],
)

py_library(
    name = "proto_enum",
    srcs = ["proto_enum.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
        ":proto_option",
        ":proto_reserved",
    ],
)

py_library(
    name = "proto_service",
    srcs = ["proto_service.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_identifier",
        ":proto_option",
    ],
)

py_library(
    name = "proto_file",
    srcs = ["proto_file.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_import",
        ":proto_node",
        ":proto_option",
        ":proto_package",
        ":proto_syntax",
    ],
)

py_library(
    name = "parser",
    srcs = ["parser.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_enum",
        ":proto_file",
        ":proto_import",
        ":proto_node",
        ":proto_option",
        ":proto_package",
        ":proto_syntax",
    ],
)

py_binary(
    name = "parser_binary",
    srcs = ["parser.py"],
    main = "parser.py",
    deps = [":parser"],
)
