load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "proto_node",
    srcs = ["proto_node.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "proto_syntax",
    srcs = ["proto_syntax.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        "//src/constants:proto_string_literal",
    ],
)

py_library(
    name = "proto_import",
    srcs = ["proto_import.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        "//src/constants:proto_string_literal",
    ],
)

py_library(
    name = "proto_package",
    srcs = ["proto_package.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
    ],
)

py_library(
    name = "proto_option",
    srcs = ["proto_option.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        "//src/constants:proto_constant",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_range",
    srcs = ["proto_range.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        "//src/constants:proto_int",
    ],
)

py_library(
    name = "proto_reserved",
    srcs = ["proto_reserved.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_range",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_extensions",
    srcs = ["proto_extensions.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_range",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_extend",
    srcs = ["proto_extend.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_comment",
        ":proto_message_field",
        ":proto_node",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_message_field",
    srcs = ["proto_message_field.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_enum",
        ":proto_node",
        "//src/constants:proto_identifier",
        "//src/constants:proto_int",
    ],
)

py_library(
    name = "proto_message",
    srcs = ["proto_message.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_comment",
        ":proto_enum",
        ":proto_extend",
        ":proto_extensions",
        ":proto_map",
        ":proto_message_field",
        ":proto_node",
        ":proto_oneof",
        ":proto_option",
        ":proto_reserved",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_oneof",
    srcs = ["proto_oneof.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_comment",
        ":proto_map",
        ":proto_message_field",
        ":proto_node",
        ":proto_option",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_map",
    srcs = ["proto_map.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_message_field",
        ":proto_node",
        "//src/constants:proto_identifier",
        "//src/constants:proto_int",
    ],
)

py_library(
    name = "proto_enum",
    srcs = ["proto_enum.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_comment",
        ":proto_node",
        ":proto_option",
        ":proto_reserved",
        "//src/constants:proto_identifier",
        "//src/constants:proto_int",
    ],
)

py_library(
    name = "proto_service",
    srcs = ["proto_service.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_comment",
        ":proto_option",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_comment",
    srcs = ["proto_comment.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_node",
        "//src/constants:proto_identifier",
    ],
)

py_library(
    name = "proto_file",
    srcs = ["proto_file.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_enum",
        ":proto_import",
        ":proto_message",
        ":proto_node",
        ":proto_option",
        ":proto_package",
        ":proto_syntax",
    ],
)

py_library(
    name = "parser",
    srcs = ["parser.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_enum",
        ":proto_extend",
        ":proto_file",
        ":proto_import",
        ":proto_message",
        ":proto_node",
        ":proto_option",
        ":proto_package",
        ":proto_service",
        ":proto_syntax",
    ],
)

py_binary(
    name = "parser_binary",
    srcs = ["parser.py"],
    main = "parser.py",
    visibility = ["//visibility:public"],
    deps = [":parser"],
)

py_library(
    name = "compatibility_checker",
    srcs = ["compatibility_checker.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":parser",
        ":proto_file",
        ":proto_node",
    ],
)

py_binary(
    name = "compatibility_checker_binary",
    srcs = ["compatibility_checker.py"],
    main = "compatibility_checker.py",
    visibility = ["//visibility:public"],
    deps = [":compatibility_checker"],
)
