load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "string_literal_test",
    srcs = ["string_literal_test.py"],
    deps = [
        "//src:proto_string_literal",
    ],
)

py_test(
    name = "identifier_test",
    srcs = ["identifier_test.py"],
    deps = [
        "//src:proto_identifier",
    ],
)

py_test(
    name = "bool_test",
    srcs = ["bool_test.py"],
    deps = [
        "//src:proto_bool",
    ],
)

py_test(
    name = "int_test",
    srcs = ["int_test.py"],
    deps = [
        "//src:proto_int",
    ],
)

py_test(
    name = "float_test",
    srcs = ["float_test.py"],
    deps = [
        "//src:proto_float",
    ],
)

py_test(
    name = "constant_test",
    srcs = ["constant_test.py"],
    deps = [
        "//src:proto_bool",
        "//src:proto_constant",
        "//src:proto_identifier",
        "//src:proto_int",
        "//src:proto_string_literal",
    ],
)

py_test(
    name = "syntax_test",
    srcs = ["syntax_test.py"],
    deps = [
        "//src:proto_string_literal",
        "//src:proto_syntax",
    ],
)

py_test(
    name = "import_test",
    srcs = ["import_test.py"],
    deps = [
        "//src:proto_import",
    ],
)

py_test(
    name = "package_test",
    srcs = ["package_test.py"],
    deps = [
        "//src:proto_package",
    ],
)
