load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "proto_string_literal_test",
    srcs = ["proto_string_literal_test.py"],
    deps = [
        "//src:proto_string_literal",
    ],
)

py_test(
    name = "proto_identifier_test",
    srcs = ["proto_identifier_test.py"],
    deps = [
        "//src:proto_identifier",
    ],
)

py_test(
    name = "proto_bool_test",
    srcs = ["proto_bool_test.py"],
    deps = [
        "//src:proto_bool",
    ],
)

py_test(
    name = "proto_int_test",
    srcs = ["proto_int_test.py"],
    deps = [
        "//src:proto_int",
    ],
)

py_test(
    name = "proto_float_test",
    srcs = ["proto_float_test.py"],
    deps = [
        "//src:proto_float",
    ],
)

py_test(
    name = "proto_constant_test",
    srcs = ["proto_constant_test.py"],
    deps = [
        "//src:proto_bool",
        "//src:proto_constant",
        "//src:proto_identifier",
        "//src:proto_int",
        "//src:proto_string_literal",
    ],
)

py_test(
    name = "proto_option_test",
    srcs = ["proto_option_test.py"],
    deps = [
        "//src:proto_bool",
        "//src:proto_constant",
        "//src:proto_identifier",
        "//src:proto_int",
        "//src:proto_option",
        "//src:proto_string_literal",
    ],
)

py_test(
    name = "proto_reserved_test",
    srcs = ["proto_reserved_test.py"],
    deps = [
        "//src:proto_reserved",
    ],
)

py_test(
    name = "proto_syntax_test",
    srcs = ["proto_syntax_test.py"],
    deps = [
        "//src:proto_string_literal",
        "//src:proto_syntax",
    ],
)

py_test(
    name = "proto_import_test",
    srcs = ["proto_import_test.py"],
    deps = [
        "//src:proto_import",
    ],
)

py_test(
    name = "proto_package_test",
    srcs = ["proto_package_test.py"],
    deps = [
        "//src:proto_package",
    ],
)

py_test(
    name = "proto_message_test",
    srcs = ["proto_message_test.py"],
    deps = [
        "//src:proto_identifier",
        "//src:proto_message",
    ],
)

py_test(
    name = "proto_enum_test",
    srcs = ["proto_enum_test.py"],
    deps = [
        "//src:proto_bool",
        "//src:proto_constant",
        "//src:proto_enum",
        "//src:proto_identifier",
        "//src:proto_option",
        "//src:proto_reserved",
        "//src:proto_string_literal",
    ],
)

py_test(
    name = "parser_test",
    srcs = ["parser_test.py"],
    deps = [
        "//src:parser",
        "//src:proto_constant",
        "//src:proto_enum",
        "//src:proto_float",
        "//src:proto_identifier",
        "//src:proto_import",
        "//src:proto_int",
        "//src:proto_message",
        "//src:proto_option",
        "//src:proto_string_literal",
        "//src:proto_syntax",
    ],
)
