load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python:packaging.bzl", "py_package")

py_library(
    name = "parser",
    srcs = ["parser.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//src:proto_enum",
        "//src:proto_extend",
        "//src:proto_file",
        "//src:proto_import",
        "//src:proto_message",
        "//src:proto_node",
        "//src:proto_option",
        "//src:proto_package",
        "//src:proto_service",
        "//src:proto_syntax",
    ],
)

py_binary(
    name = "parser_binary",
    srcs = ["parser.py"],
    main = "parser.py",
    visibility = ["//visibility:public"],
    deps = [":parser"],
)

py_library(
    name = "compatibility_checker",
    srcs = ["compatibility_checker.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":parser",
        "//src:proto_file",
        "//src:proto_node",
    ],
)

py_binary(
    name = "compatibility_checker_binary",
    srcs = ["compatibility_checker.py"],
    main = "compatibility_checker.py",
    visibility = ["//visibility:public"],
    deps = [":compatibility_checker"],
)

py_package(
    name = "all_package",
    packages = ["src"],
    deps = [":parser", ":compatibility_checker"],
    visibility = ["//visibility:public"],
)